--- a/resources/assets/styles/skhoop/sections/_product-listing.scss
+++ b/resources/assets/styles/skhoop/sections/_product-listing.scss
@@ -168,9 +168,10 @@
   }
 
   &-image {
-    @include aspect-ratio(450,518);
+    @include aspect-ratio(1330,1995);
 
     margin-bottom: 0;
+    border-radius: 0.3125rem;
 
     .visible-on-hover {
       opacity: 0;
@@ -187,8 +188,7 @@
 
   &-wrapper {
     position: relative;
-    border-top-right-radius: 0.3125rem;
-    border-top-left-radius: 0.3125rem;
+    border-radius: 0.3125rem;
   }
 
   &-status {
@@ -213,10 +213,32 @@
   }
 
   &-details {
-    margin-top: -0.0625rem;
+    position: absolute;
+    bottom: 0.3125rem;
+    padding: 0.0625rem 6px 0;
+    max-width: calc(100% - 2.25rem);
+    min-width: calc(100% - 2.25rem);
     color: $body-color;
-    border-bottom-right-radius: 0.3125rem;
-    border-bottom-left-radius: 0.3125rem;
+    border-radius: 0.3125rem;
+
+    @include center(horizontal);
+
+    @include media-breakpoint-up(sm) {
+      bottom: 0.9375rem;
+      min-width: 8.75rem;
+      max-width: calc(100% - 3.25rem);
+    }
+
+    @include media-breakpoint-up(lg) {
+      bottom: 1.375rem;
+      padding: 0.3125rem 0.375rem 0.125rem;
+      min-width: 8.75rem;
+      max-width: calc(100% - 5.625rem);
+    }
+
+    @include media-min(71.25rem) {
+      min-width: 10.9375rem;
+    }
 
     &:hover {
       color: $body-color;
@@ -250,7 +272,7 @@
     }
 
     @include media-breakpoint-up(lg) {
-      margin-top: -0.1875rem;
+      margin-top: -0.25rem;
       font-size: 0.8125rem;
       letter-spacing: 1.86px;
     }
@@ -259,50 +281,10 @@
   // Size Modifiers
   &.is-big {
     @include col-image-width(33.333333%, 50%);
-
-    .product-wrapper {
-      padding: 2.5rem 0.9375rem 0.9375rem;
-
-      @include media-breakpoint-up(lg) {
-        padding: 6.25rem 2.5rem 4.6875rem;
-      }
-    }
-
-    .product-details {
-      padding: 0 0.3125rem 0.3125rem;
-
-      @include media-min(23.4375rem) {
-        padding: 0 0.9375rem 0.3125rem;
-      }
-
-      @include media-breakpoint-up(lg) {
-        padding: 0 1.5rem 1.5625rem;
-      }
-    }
   }
 
   &.is-small {
     @include col-image-width(25%, 50%);
-
-    .product-wrapper {
-      padding: 2.5rem 0.9375rem 0.9375rem;
-
-      @include media-breakpoint-up(lg) {
-        padding: 4.6875rem 2.3438rem 2.8125rem;
-      }
-    }
-
-    .product-details {
-      padding: 0 0.3125rem 0.3125rem;
-
-      @include media-min(375px) {
-        padding: 0 0.9375rem 0.3125rem;
-      }
-
-      @include media-breakpoint-up(lg) {
-        padding: 0 0.75rem 1.5625rem;
-      }
-    }
   }
 
   // Product Status Modifiers
