--- a/resources/assets/styles/skhoop/components/_cart.scss
+++ b/resources/assets/styles/skhoop/components/_cart.scss
@@ -142,7 +142,7 @@
       width: 100%;
       height: 100%;
       background-color: rgba(41,41,41,0.8);
-      z-index: 3;
+      z-index: $zindex-sticky;
     }
 	}
 }
