--- a/resources/assets/styles/skhoop/components/_alert.scss
+++ b/resources/assets/styles/skhoop/components/_alert.scss
@@ -25,8 +25,10 @@
     }
 
     img {
-      width: 40px;
-      height: 40px;
+      width: 100%;
+      height: 100%;
+      max-width: 40px;
+      max-height: 40px;
     }
   }
 
@@ -48,7 +50,7 @@
 
     .iphone & {
       @include media-max(576px) {
-        display: block!important;
+        display: block !important;
         width: 100%;
       }
     }
