Removed borders on alert

--- a/resources/assets/styles/skhoop/components/_alert.scss
+++ b/resources/assets/styles/skhoop/components/_alert.scss
@@ -1,6 +1,7 @@
 .alert {
   padding: 1.25rem;
   border-radius: 0;
+  border: none;
 
   @include media-breakpoint-up(sm) {
     padding: 0.5625rem 1.25rem;
