Removed padding on checkout product item figure

--- a/resources/assets/styles/skhoop/components/_cart.scss
+++ b/resources/assets/styles/skhoop/components/_cart.scss
@@ -99,9 +99,11 @@
         padding: 0;
       }
 
+      /* TODO: To whom it may concern please review <<<<<<<<<<<<<<<<<<<<<<<<<<<< */
       .image figure {
         @include aspect-ratio(1330, 1995);
       }
+      /* END TODO <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
     }
   }
 
