--- a/resources/assets/styles/skhoop/sections/_product-listing.scss
+++ b/resources/assets/styles/skhoop/sections/_product-listing.scss
@@ -173,15 +173,19 @@
     margin-bottom: 0;
     border-radius: 0.3125rem;
 
+    img {
+      z-index: 1;
+    }
+
     .visible-on-hover {
-      opacity: 0;
+      z-index: 0;
     }
   }
 
   &:hover {
     .product-image {
       .visible-on-hover {
-        opacity: 1;
+        z-index: 1;
       }
     }
   }
@@ -215,6 +219,7 @@
   &-details {
     position: absolute;
     bottom: 0.3125rem;
+    z-index: 1;
     padding: 0.0625rem 6px 0;
     max-width: calc(100% - 2.25rem);
     min-width: calc(100% - 2.25rem);
