--- a/resources/assets/styles/skhoop/components/_picker.scss
+++ b/resources/assets/styles/skhoop/components/_picker.scss
@@ -104,6 +104,7 @@
         margin-top: 0;
         font-size: 0.75rem;
         line-height: 1.25rem;
+        white-space: nowrap;
       }
     }
 
