--- a/resources/assets/styles/skhoop/sections/_newsletter.scss
+++ b/resources/assets/styles/skhoop/sections/_newsletter.scss
@@ -159,5 +159,11 @@
     @include media-breakpoint-up(md) {
       padding-left: 1.875rem;
     }
+
+    .custom-control-label {
+      span {
+        margin-left: 0;
+      }
+    }
   }
 }
