--- a/resources/assets/styles/skhoop/components/_cart.scss
+++ b/resources/assets/styles/skhoop/components/_cart.scss
@@ -3,16 +3,15 @@
   top: 100%;
   right: -1.25rem;
   overflow: hidden;
-  padding-top: 0.8125rem;
+  padding-top: 0;
   width: 100%;
   max-width: 12.5rem;
   max-height: 0;
-  transition: max-height .3s ease-in-out;
+  transition: all .3s ease-in-out;
 
   @include media-breakpoint-up(lg) {
     max-width: 23.4375rem;
     right: 0.9375rem;
-    padding-top: 0.625rem;
   }
 
   &-wrapper {
