--- a/resources/assets/styles/skhoop/sections/_promo-box.scss
+++ b/resources/assets/styles/skhoop/sections/_promo-box.scss
@@ -8,6 +8,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
     margin-bottom: 0.4375rem;
+
+    @include media-breakpoint-up(lg){
+      font-size: 1.5rem;
+    }
   }
 
   &-item {
