--- a/resources/assets/styles/skhoop/sections/_selected-product.scss
+++ b/resources/assets/styles/skhoop/sections/_selected-product.scss
@@ -25,7 +25,7 @@
 
   &-preview {
     .breadcrumb {
-      margin-top: 0.8125rem;
+      padding: 0.9375rem 1rem 0.9375rem 0.6875rem;
     }
 
     &.is-oos .item {
