Invision note: If I click on the same color as I have the page reloads. The color im currently in should not be clickable.

--- a/resources/assets/styles/skhoop/components/_picker.scss
+++ b/resources/assets/styles/skhoop/components/_picker.scss
@@ -87,6 +87,10 @@
       box-shadow: 0 0 0.3125rem 0 rgba($black,0.25);
     }
   }
+
+  .item.is-active {
+    pointer-events: none;
+  }
 }
 
 // Size Selector
