--- a/resources/assets/styles/skhoop/sections/_selected-product.scss
+++ b/resources/assets/styles/skhoop/sections/_selected-product.scss
@@ -28,9 +28,9 @@
       padding: 0.9375rem 1rem 0.9375rem 0.6875rem;
     }
 
-    &.is-oos .item {
-      opacity: 0.5;
-    }
+    // &.is-oos .item {
+    //   opacity: 0.5;
+    // }
   }
 
   &-slider {
@@ -39,6 +39,8 @@
     transition: all 200ms cubic-bezier(0.165, 0.84, 0.44, 1);
     padding: 0 0.625rem;
     background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 5px;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
 
     &-col {
       width: 100%;
@@ -102,7 +104,7 @@
       justify-content: center;
       width: 100%;
       border-radius: 5px;
-      box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+      background: $white;
 
       @include aspect-ratio(1330, 1995);
     }
