--- a/resources/assets/styles/skhoop/sections/_newsletter.scss
+++ b/resources/assets/styles/skhoop/sections/_newsletter.scss
@@ -133,6 +133,7 @@
       min-width: auto;
       margin-right: 0.625rem;
       border-radius: 9.375rem;
+      border: 1px solid $secondary;
 
       @include media-breakpoint-up(md) {
         margin-right: 1.25rem;
