Invision note: The font boldness seams to fat. Check weight, want a thiner feeling like this.

--- a/resources/assets/styles/skhoop/sections/_fifty-fifty-section.scss
+++ b/resources/assets/styles/skhoop/sections/_fifty-fifty-section.scss
@@ -81,7 +81,7 @@
     p {
       font-family: $font-family-source-serif;
       font-size: 1rem;
-      font-weight: 600;
+      font-weight: $font-weight-normal;
       letter-spacing: 0.5px;
       line-height: 24px;
       margin-bottom: 2.625rem;
