--- a/resources/assets/styles/skhoop/sections/_resellers.scss
+++ b/resources/assets/styles/skhoop/sections/_resellers.scss
@@ -41,7 +41,8 @@
 
     &-cell {
       font-size: 14px;
-      font-weight: 300;
+      font-weight: $font-weight-normal;
+      color: $body-color;
       letter-spacing: 0.5px;
       padding: 0 0.75rem;
 
@@ -49,6 +50,10 @@
         text-transform: uppercase;
         font-weight: 500;
         letter-spacing: 1px;
+      }
+
+      &>a {
+        color: $body-color;
       }
 
       &:first-child {
