Invision note mobile: Check background color should be

--- a/resources/assets/styles/skhoop/layouts/_header.scss
+++ b/resources/assets/styles/skhoop/layouts/_header.scss
@@ -275,7 +275,7 @@ $mobile-margin-top-menu: 3.75rem;
 
     .navbar-nav {
       padding-top: 0;
-      background-color: $green;
+      background-color: $lightGreen;
 
       .nav-item {
         border-bottom: 1px solid $white;
@@ -301,7 +301,7 @@ $mobile-margin-top-menu: 3.75rem;
     .content-info {
       padding-top: 3.125rem;
       padding-bottom: 3.125rem;
-      background-color: $green;
+      background-color: $lightGreen;
 
       .brand-footer {
         img {
