Fullscreen image top offset

--- a/resources/assets/styles/skhoop/sections/_selected-product.scss
+++ b/resources/assets/styles/skhoop/sections/_selected-product.scss
@@ -129,7 +129,7 @@
 
         // This will reset the aspect ratio mixin
         position: relative;
-        top: initial;
+        top: -115px;
         left: initial;
         right: initial;
         bottom: initial;
