--- a/resources/assets/styles/skhoop/sections/_product-listing.scss
+++ b/resources/assets/styles/skhoop/sections/_product-listing.scss
@@ -148,6 +148,10 @@
   }
 
   .product-filter-toggle {
+    @include media-max(992px) {
+      margin-top: 10px;
+    }
+
     .js-filter-toggle {
       font-size: 0.8125rem;
       font-weight: 500;
@@ -160,7 +164,7 @@
       }
 
       button {
-        margin-left: 1.5625rem;
+        margin-left: 0.1875rem;
       }
     }
   }
