increase alert z-index

--- a/resources/assets/styles/skhoop/components/_alert.scss
+++ b/resources/assets/styles/skhoop/components/_alert.scss
@@ -2,6 +2,7 @@
   padding: 1.25rem;
   border-radius: 0;
   border: none;
+  z-index: 1051!important;
 
   @include media-breakpoint-up(sm) {
     padding: 0.5625rem 1.25rem;
