--- a/resources/assets/styles/skhoop/layouts/_footer.scss
+++ b/resources/assets/styles/skhoop/layouts/_footer.scss
@@ -5,7 +5,7 @@
 
   @include media-breakpoint-up(md) {
     padding-top: 3.25rem;
-    padding-bottom: 2.0625rem;
+    padding-bottom: 3.25rem;
   }
 
   .h4 {
@@ -96,6 +96,18 @@
       }
     }
   }
+
+  .klarna {
+    margin-top: 20px;
+    img {
+      width: 100%;
+      height: auto;
+
+      @include media-breakpoint-down(md) {
+        max-width: 440px;
+      }
+    }
+  }
 }
 
 .trust-bar {
@@ -116,7 +128,7 @@
     width: 14.375rem;
     margin-left: auto;
     margin-right: auto;
-    
+
 
     @include media-breakpoint-up(md) {
       display: inline-block;
