Images Free shipping/return

--- a/resources/assets/styles/skhoop/sections/_selected-product.scss
+++ b/resources/assets/styles/skhoop/sections/_selected-product.scss
@@ -271,7 +271,7 @@
           background-size: cover;
 
           &.shipping {
-            background-image: url(../images/icon/shipping.svg);
+            background-image: url(../images/icon/shippings.svg);
           }
 
           &.return {
