--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -6,6 +6,7 @@ $blue:                        #007bff;
 $indigo:                      #6610f2;
 $purple:                      #6f42c1;
 $pink:                        #e83e8c;
+$pink-100:                    #E99191;
 $red:                         #d45656;
 $lightRed:                    #dab4b4;
 $orange:                      #fd7e14;
@@ -36,13 +37,14 @@ $invalidColor:                  $red;
 $theme-colors: (
   "primary":                   $primary,
   "secondary":                 $secondary,
+  "tersiary":                  $pink-100,
   "success":                   $success,
   "info":                      $info,
   "warning":                   $warning,
   "danger":                    $danger,
   "ash":                       $ash,
   "lightgreen":                $lightGreen,
-  "red":                $red,
+  "red":                       $red,
 );
 
 // Responsive font size breakpoint
