--- a/resources/assets/styles/skhoop/components/_buttons.scss
+++ b/resources/assets/styles/skhoop/components/_buttons.scss
@@ -67,6 +67,18 @@
         border-color: #7e7e7e;
       }
     }
+
+    @if ($color == "tersiary") {
+      color: $white;
+      background-color: $pink-100;
+      border-color: $pink-100;
+
+      &:hover {
+        color: $body-color;
+        background-color: $white;
+        border-color: #7e7e7e;
+      }
+    }
   }
 }
 
