--- a/resources/assets/styles/skhoop/common/_variables.scss
+++ b/resources/assets/styles/skhoop/common/_variables.scss
@@ -6,7 +6,7 @@ $blue:                        #007bff;
 $indigo:                      #6610f2;
 $purple:                      #6f42c1;
 $pink:                        #e83e8c;
-$pink-100:                    #E99191;
+$pink-100:                    #dab3b4;
 $red:                         #d45656;
 $lightRed:                    #dab4b4;
 $orange:                      #fd7e14;
