--- a/resources/assets/styles/skhoop/main.scss
+++ b/resources/assets/styles/skhoop/main.scss
@@ -15,6 +15,7 @@
 @import "components/product-details-inline";
 @import "components/summary-group";
 @import "components/cookies";
+@import "components/search";
 @import "vendor/flickity";
 @import "vendor/flickity-fullscreen";
 @import "sections/newsletter";
@@ -25,6 +26,7 @@
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
+@import "sections/section-header";
 @import "sections/category-banner";
 @import "sections/product-listing";
 @import "sections/product-filter";
