--- a/resources/assets/styles/skhoop/sections/_checkout.scss
+++ b/resources/assets/styles/skhoop/sections/_checkout.scss
@@ -36,7 +36,11 @@
     max-width: 20rem;
 
     @include media-breakpoint-up(lg) {
-      max-width: 21.875rem;
+      // max-width: 21.875rem;
+      max-width: 29.875rem;
+      h3, .h3 {
+        padding-left: 15px;
+      }
     }
   }
 
